Add index.html to root for GitHub Pages

--- a/thankyou/thankyou.html
+++ b/thankyou/thankyou.html
@@ -16,7 +16,7 @@
     <section class="topbar">
       <section class="topbarleft">
         <div class="butt">
-            <a href="/home/home.html"><button type="button">HOME</button></a>
+            <a href="/home/index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
             <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
