--- a/Our Story/ourstory.html
+++ b/Our Story/ourstory.html
@@ -14,7 +14,7 @@
     <section class="topbar">
       <section class="topbarleft">
         <div class="butt">
-            <a href="/home/index.html"><button type="button">HOME</button></a>
+            <a href="/index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
             <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
