--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
   
     
-    <link rel="stylesheet"  href="./home.css">
+    <link rel="stylesheet"  href="/home/home.css">
 </head>
 
 <body>
     <section class="topbar">
       <section class="topbarleft">
         <div class="butt">
-            <a href="/home/index.html"><button type="button">HOME</button></a>
+            <a href="/index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
             <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
