--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <section class="topbar">
       <section class="topbarleft">
         <div class="butt">
-            <a href="/index.html"><button type="button">HOME</button></a>
+            <a href="./index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
-            <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
+            <a href="/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
         </div>
         <div class="butt">
             <a href="/events/events.html"><button type="button">EVENTS</button></a>
@@ -46,7 +46,7 @@
 
     
         <section class="topbarright">
-        <img src="./logo.png"alt=logo height="45px"width="60px">
+        <img src="/home/logo.png"alt=logo height="45px"width="60px">
         </section >
 
     </section>
