Fix file paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   
     
-    <link rel="stylesheet"  href="/home/home.css">
+    <link rel="stylesheet"  href="C:\Users\adity\OneDrive\Desktop\CODING!!!\E-invite\home\home.css">
+    
 </head>
 
 <body>
