fix file paths for github pages

--- a/Our Story/ourstory.html
+++ b/Our Story/ourstory.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="./ourstory.css">
+    <link rel="stylesheet" href="/E-invite/Our Story/ourstory.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
@@ -12,30 +13,29 @@
 </head>
 <body>
     <section class="topbar">
-      <section class="topbarleft">
-        <div class="butt">
-            <a href="/index.html"><button type="button">HOME</button></a>
-        </div>
-        <div class="butt">
-            <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
-        </div>
-        <div class="butt">
-            <a href="/events/events.html"><button type="button">EVENTS</button></a>
-        </div>
-        <div class="butt">
-            <a href="/wedding/wedding.html"><button type="button">WEDDING</button></a>
-        </div>
-        <div class="butt">
-            <a href="/contactme/contact.html"><button type="button">CONTACT ME</button></a>
-        </div>
-        <div class="butt">
-            <a href="/gallery/gallery.html"><button type="button">GALLERY</button></a>
-        </div>
-        <div class="butt">
-            <a href="/thankyou/thankyou.html"><button type="button">THANK YOU</button></a>
-        </div>
-    </section>
-    
+        <section class="topbarleft">
+            <div class="butt">
+                <a href="/E-invite/index.html"><button type="button">HOME</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/wedding/wedding.html"><button type="button">WEDDING</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/contactme/contact.html"><button type="button">CONTACT ME</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/gallery/gallery.html"><button type="button">GALLERY</button></a>
+            </div>
+            <div class="butt">
+                <a href="/E-invite/thankyou/thankyou.html"><button type="button">THANK YOU</button></a>
+            </div>
+        </section>
     
         <section class="topbarright">
             <img src="./logo.png"alt=logo height="45px"width="60px">
