--- a/wedding/wedding.html
+++ b/wedding/wedding.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     
-    <link rel="stylesheet"  href="./wedding.css">
+    <link rel="stylesheet" href="/E-invite/wedding/wedding.css">
     <script src="./wedding.js"></script>
 </head>
 
@@ -14,25 +14,25 @@
     <section class="topbar">
       <section class="topbarleft">
         <div class="butt">
-            <a href="/index.html"><button type="button">HOME</button></a>
+            <a href="/E-invite/index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
-            <a href="/Our Story/./ourstory.html"><button type="button">OUR STORY</button></a>
+            <a href="/E-invite/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
         </div>
         <div class="butt">
-            <a href="/events/events.html"><button type="button">EVENTS</button></a>
+            <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
         </div>
         <div class="butt">
-            <a href="/wedding/wedding.html"><button type="button">WEDDING</button></a>
+            <a href="/E-invite/wedding/wedding.html"><button type="button">WEDDING</button></a>
         </div>
         <div class="butt">
-            <a href="/contactme/contact.html"><button type="button">CONTACT ME</button></a>
+            <a href="/E-invite/contactme/contact.html"><button type="button">CONTACT ME</button></a>
         </div>
         <div class="butt">
-            <a href="/gallery/gallery.html"><button type="button">GALLERY</button></a>
+            <a href="/E-invite/gallery/gallery.html"><button type="button">GALLERY</button></a>
         </div>
         <div class="butt">
-            <a href="/thankyou/thankyou.html"><button type="button">THANK YOU</button></a>
+            <a href="/E-invite/thankyou/thankyou.html"><button type="button">THANK YOU</button></a>
         </div>
     </section>
     
