--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -18,7 +18,7 @@
             <a href="/E-invite/index.html"><button type="button">HOME</button></a>
         </div>
         <div class="butt">
-            <a href="/E-invite/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
+            <a href="/E-invite/ourstory/ourstory.html"><button type="button">OUR STORY</button></a>
         </div>
         <div class="butt">
             <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
