--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/E-invite/Our Story/ourstory.css">
+    <link rel="stylesheet" href="/E-invite/ourstory/ourstory.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
                 <a href="/E-invite/index.html"><button type="button">HOME</button></a>
             </div>
             <div class="butt">
-                <a href="/E-invite/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
+                <a href="/E-invite/ourstory/ourstory.html"><button type="button">OUR STORY</button></a>
             </div>
             <div class="butt">
                 <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
