--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="/E-invite/index.html"><button type="button">HOME</button></a>
             </div>
             <div class="butt">
-                <a href="/E-invite/Our Story/ourstory.html"><button type="button">OUR STORY</button></a>
+                <a href="/E-invite/ourstory/ourstory.html"><button type="button">OUR STORY</button></a>
             </div>
             <div class="butt">
                 <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
@@ -46,7 +46,7 @@
 
     
         <section class="topbarright">
-        <img src="/home/logo.png"alt=logo height="45px"width="60px">
+        <img src="/E-invite/home/logo.png"alt=logo height="45px"width="60px">
         </section >
 
     </section>
