--- a/events/events.html
+++ b/events/events.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
     
     
-    <link rel="stylesheet" href="/E-invite/events/events.css">
+    <link rel="stylesheet" href="/events/events.css">
 </head>
 
 <body>
@@ -58,7 +58,9 @@
 
 
 <section class="head">
-<div class="tophead"><h1>OTHER EVENTS😄</h1></div>
+<br>
+<hr class="line">
+
 <div class="headdesc"><h3>
          Join us in celebrating our wedding with a series of joyful events! Below, you'll find
          details about each occasion, from the haldi ceremony to the melodious sangeet ceremony.
@@ -66,7 +68,7 @@
         </h3>
 </div>
 <br>
-<hr>
+<br>
 <br>
 <br>
 </section>
