--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Link to CSS -->
-    <link rel="stylesheet" href="/E-invite/home/home.css">
+    <link rel="stylesheet" href="/home/home.css">
 </head>
 
 <body>
@@ -21,7 +24,7 @@
                 <a href="/E-invite/index.html"><button type="button">HOME</button></a>
             </div>
             <div class="butt">
-                <a href="/E-invite/ourstory/ourstory.html"><button type="button">OUR STORY</button></a>
+                <a href="/ourstory/ourstory.html"><button type="button">OUR STORY</button></a>
             </div>
             <div class="butt">
                 <a href="/E-invite/events/events.html"><button type="button">EVENTS</button></a>
@@ -54,6 +57,5 @@
         <div class="name">
             <h1>KARTIK & SRISHTI</h1>
         </div>
-    </section>
 </body>
 </html>
