wedding page layout

--- a/wedding/wedding.html
+++ b/wedding/wedding.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     
-    <link rel="stylesheet" href="/E-invite/wedding/wedding.css">
+    <link rel="stylesheet" href="/wedding/wedding.css">
     <script src="./wedding.js"></script>
 </head>
 
@@ -48,9 +48,13 @@
 <br>
 <br>
 <br>
-    <section class="cards">
+<br>
+<br>
+    <section class="cardsouter">
+        <section class="cards">
         
         </section>
+    </section>
         <section class="contents">
             <section class="clock">
 
