--- a/events/events.html
+++ b/events/events.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
     
     
-    <link rel="stylesheet" href="/events/events.css">
+    <link rel="stylesheet" href="/E-invite/events/events.css">
 </head>
 
 <body>
