--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -7,7 +7,7 @@
     <title>Events</title>
     
     
-    <link rel="stylesheet" href="/gallery/gallery.css">
+    <link rel="stylesheet" href="/E-invite/gallery/gallery.css">
     <script src="./gallery.js"></script>
 </head>
 
