--- a/thankyou/thankyou.html
+++ b/thankyou/thankyou.html
@@ -52,6 +52,9 @@
     <section class="thankq">
     <p class="playfair-display-sc-black ">THANK YOU</p><pre><p class="playfair-display-sc-black-itali">"Your presence means the world to us 
     as we begin this new journey."</p></pre>
-</section>
+    </section>  
+    <section class="adi">
+        <p>DESIGNED BY ADI !!</p>
+    </section>
 </body>
 </html>
