--- a/contactme/contact.html
+++ b/contactme/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/E-invite/contactme/contact.css">
+    <link rel="stylesheet" href="/contactme/contact.css">
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
 
@@ -50,11 +50,11 @@
     <section class="contact">
     <div>
        
-        <h3><pre> 
+        <h3><p> 
               Welcome! We are delighted to be a part of your special journey. If you have any questions about our events 
                        or wish to discuss any specific details, please do not hesitate to get in touch with us.
 
-        </pre></h3>
+        </p></h3>
     </div>
 </section>
 <section class="flex">
